--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "dayjs": "^1.8.12",
     "element-ui": "^2.7.0",
+    "github-markdown-css": "^3.0.1",
     "sea-axios": "^2.0.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
